service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
